fix alignment of ordered list items

--- a/sites/all/themes/msd2014/css/msd2014-extra.css
+++ b/sites/all/themes/msd2014/css/msd2014-extra.css
@@ -799,3 +799,9 @@ body .uomcontent .button-small:hover {
 li p {
   display: inline-block; 
 }
+
+.content ol li {
+  list-style-position: outside;
+  margin-left: 18px;
+  padding-left: 4px;
+}
